--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.70",
+    "axios": "^1.9.0",
     "discord.js": "^14.19.3"
   }
 }
