--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.70",
     "axios": "^1.9.0",
+    "canvas": "^3.1.0",
     "discord.js": "^14.19.3"
   }
 }
